--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body{
   font-family: Sans-serif;
 }
 
+/* before start website loadere program in css */
+#loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('https://media.giphy.com/media/8PgSWS7YBTPKkLfg1F/source.gif') 50% 50% no-repeat rgb(0,0,0);
+}
+
 .container {
   max-width: 1024px;
   margin: 0 auto;
